Added styles and seed makeups

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,29 @@
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<div class="jumbotron">
+     <!-- Carousel
+  ================================================== -->
+  <div class="">
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	  <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+          <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+          
+        </ol>
+        <div class="carousel-inner">
+          <div class="item active">
+            <%= image_tag("6.jpg",:size => "900x500",:alt => "first") %>
+          </div>
+          <div class="item">
+            <%= image_tag("6.jpg",:size => "900x500",:alt => "Second Slide") %>
+          </div>
+          <div class="item">
+            <%= image_tag("6.jpg",:size => "900x500",:alt => "third slide") %>
+          </div>
+           <div class="item active">
+            <%= image_tag("6.jpg",:size => "900x500",:alt => "first") %>
+        </div>
+       
+    </div><!-- /example -->
